--- a/src/App.css
+++ b/src/App.css
@@ -49,13 +49,14 @@
   height: 100%;
   justify-content: space-around;
   margin-bottom: 5rem;
-  margin-top: 5rem;
+  margin-top: 12rem;
 }
 
 .usp-section h2{
   color: #ffffff;
   font-size: 2rem;
   font-weight: 500;
+  margin-bottom: 4rem;
   text-align: center;
   text-decoration: none;
 }
