--- a/src/components/AboutUs/aboutus.scss
+++ b/src/components/AboutUs/aboutus.scss
@@ -1,72 +1,80 @@
-.about-us-grid .items{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    // grid-gap: 1rem;
-    margin: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    height: 80vh;
-}
+// .about-us-grid .items{
+//     display: grid;
+//     grid-template-columns: repeat(4, 1fr);
+//     // grid-gap: 1rem;
+//     margin: auto;
+//     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+//     width: 100%;
+//     height: 80vh;
+// }
 
-.about-us-grid .items .item{
-    background-color: #000000;
-    border: 1px solid #ffffff;
-    width: 100%;
-    height: 90%;
-    color: white;
-}
+// .about-us-grid .items .item{
+//     background-color: #000000;
+//     border: 1px solid #ffffff;
+//     width: 100%;
+//     height: 90%;
+//     color: white;
+// }
 
-#box1 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 2;
-}
-#box2 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 2;
-    grid-column-end: 3;
-}
-#box3 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 3;
-    grid-column-end: 4;
-}
-#box4 {
-    grid-row-start: 1;
-    grid-row-end: 4;
-    grid-column-start: 4;
-    grid-column-end: 5;
-}
-#box5 {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-#box6 {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 3;
-    grid-column-end: 4
-}
-#box7 {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 3;
-    grid-column-end: 4;
-}
-// #box8 {
+// #box1 {
 //     grid-row-start: 1;
-//     grid-row-end: 4;
+//     grid-row-end: 2;
 //     grid-column-start: 1;
+//     grid-column-end: 2;
+// }
+// #box2 {
+//     grid-row-start: 1;
+//     grid-row-end: 2;
+//     grid-column-start: 2;
 //     grid-column-end: 3;
 // }
-// #box9 {
+// #box3 {
 //     grid-row-start: 1;
-//     grid-row-end: 4;
+//     grid-row-end: 2;
 //     grid-column-start: 3;
 //     grid-column-end: 4;
 // }
+// #box4 {
+//     grid-row-start: 1;
+//     grid-row-end: 4;
+//     grid-column-start: 4;
+//     grid-column-end: 5;
+// }
+// #box5 {
+//     grid-row-start: 2;
+//     grid-row-end: 3;
+//     grid-column-start: 1;
+//     grid-column-end: 3;
+// }
+// #box6 {
+//     grid-row-start: 2;
+//     grid-row-end: 3;
+//     grid-column-start: 3;
+//     grid-column-end: 4
+// }
+// #box7 {
+//     grid-row-start: 2;
+//     grid-row-end: 3;
+//     grid-column-start: 3;
+//     grid-column-end: 4;
+// }
+// // #box8 {
+// //     grid-row-start: 1;
+// //     grid-row-end: 4;
+// //     grid-column-start: 1;
+// //     grid-column-end: 3;
+// // }
+// // #box9 {
+// //     grid-row-start: 1;
+// //     grid-row-end: 4;
+// //     grid-column-start: 3;
+// //     grid-column-end: 4;
+// // }
+
+.about-us{
+    width: 100%;
+    height: 90vh;
+    background-image: url("Grid/Group\ 45.png");
+    background-repeat: no-repeat;
+    object-fit: cover;
+}
