--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -8,7 +8,7 @@
 }
 
 .banner-container{
-    background-image:url(/banner-image/Group\ 1.png);
+    background-image:url("banner-image/Group\ 1.png");
     width: 95%;
     height: 100vh;
     background-repeat: no-repeat;
