--- a/src/components/AboutUs/aboutus.scss
+++ b/src/components/AboutUs/aboutus.scss
@@ -73,7 +73,7 @@
 
 .about-us{
     width: 100%;
-    height: 90vh;
+    height: 100%;
     background-image: url("Grid/Group\ 45.png");
     background-repeat: no-repeat;
     object-fit: cover;
